Add swagger document for category and product
