# src/internal/controllers/otp.go
@@ -25,15 +25,16 @@ func NewOtpController(logs *common.Logger) *OtpController {
 }
 
 // SendOTPHandler
-// @Summary Send OTP
-// @Description This endpoint receives the user's phone in request body and generates an otp. it then sends the otp to the user's phone via sms.
-// @Tags OTP
-// @Accept  json
-// @Produce  json
-// @Param Request body dto.SendOTPRequest true "send otp body"
-// @Success 200 {object} responses.SendOtpOkResponse "Success"
-// @Failure 404 {object} responses.UserNotFoundResponse "not found"
-// @Router /otp/send [post]
+//
+//	@Summary		Send OTP
+//	@Description	This endpoint receives the user's phone in request body and generates an otp. it then sends the otp to the user's phone via sms.
+//	@Tags			OTP
+//	@Accept			json
+//	@Produce		json
+//	@Param			Request	body		dto.SendOTPRequest				true	"send otp body"
+//	@Success		200		{object}	responses.SendOtpOkResponse		"Success"
+//	@Failure		404		{object}	responses.UserNotFoundResponse	"not found"
+//	@Router			/otp/send [post]
 func (o *OtpController) SendOTPHandler(ctx *gin.Context) {
 	data := new(dto.SendOTPRequest)
 	if err := ctx.ShouldBindJSON(&data); err != nil {
@@ -49,16 +50,17 @@ func (o *OtpController) SendOTPHandler(ctx *gin.Context) {
 }
 
 // VerifyOTPHandler
-// @Summary Verify OTP
-// @Description this endpoint receives the user's otp code in request body.if code match, the verification is successfully.
-// @Tags OTP
-// @Accept  json
-// @Produce  json
-// @Param Request body dto.VerifyOTPRequest true "verify otp body"
-// @Success 200 {object} responses.VerifyOTPResponse "Success"
-// @Failure 410 {object} responses.OtpExpiredResponse "Expired"
-// @Failure 401 {object} responses.OtpIncorrectResponse "incorrect"
-// @Router /otp/verify [post]
+//
+//	@Summary		Verify OTP
+//	@Description	this endpoint receives the user's otp code in request body.if code match, the verification is successfully.
+//	@Tags			OTP
+//	@Accept			json
+//	@Produce		json
+//	@Param			Request	body		dto.VerifyOTPRequest			true	"verify otp body"
+//	@Success		200		{object}	responses.VerifyOTPResponse		"Success"
+//	@Failure		410		{object}	responses.OtpExpiredResponse	"Expired"
+//	@Failure		401		{object}	responses.OtpIncorrectResponse	"incorrect"
+//	@Router			/otp/verify [post]
 func (o *OtpController) VerifyOTPHandler(ctx *gin.Context) {
 	data := new(dto.VerifyOTPRequest)
 	user, _ := o.serviceUser.GetUserByIP(ctx.Request)
