# src/internal/controllers/products.go
@@ -18,6 +18,16 @@ func NewProductsController(logs *common.Logger) *ProductsController {
 	}
 }
 
+// GetProductsHandler
+//
+//	@Summary		Get All Products
+//	@Description	This endpoint returns a list of all Products in the store.
+//	@Tags			Product
+//	@Accept			json
+//	@Produce		json
+//	@Success		200	{object}	responses.ProductResponse			"Success"
+//	@Failure		500	{object}	responses.InterServerErrorResponse	"Error"
+//	@Router			/product/list [get]
 func (p *ProductsController) GetProductsHandler(ctx *gin.Context) {
 	products, err := p.service.AllProducts()
 	if err != nil {
@@ -27,6 +37,18 @@ func (p *ProductsController) GetProductsHandler(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, products)
 }
 
+// CreateProductHandler
+//
+//	@Summary		Create New Product
+//	@Description	Creates a new product record in the database.
+//	@Tags			Product
+//	@Accept			json
+//	@Produce		json
+//	@Param			Request	body		dto.ProductRequest					true	"create product body"
+//	@Success		201		{object}	responses.ProductResponse			"Success"
+//	@Success		409		{object}	responses.ProductExistsResponse		"Warn"
+//	@Failure		500		{object}	responses.InterServerErrorResponse	"Error"
+//	@Router			/product/create [post]
 func (p *ProductsController) CreateProductHandler(ctx *gin.Context) {
 	data := new(dto.ProductRequest)
 	if err := ctx.ShouldBindJSON(&data); err != nil {
@@ -45,6 +67,19 @@ func (p *ProductsController) CreateProductHandler(ctx *gin.Context) {
 	ctx.JSON(http.StatusCreated, createdUser)
 }
 
+// UpdateProductHandler
+//
+//	@Summary		Update Exists Product
+//	@Description	Update an exists product record in the database.
+//	@Tags			Product
+//	@Accept			json
+//	@Produce		json
+//	@Param			pk		path		string								true	"Product Slug"
+//	@Param			Request	body		dto.ProductRequest					true	"update product body"
+//	@Success		200		{object}	responses.ProductResponse			"Success"
+//	@Success		409		{object}	responses.ProductNOTExistsResponse	"Warn"
+//	@Failure		500		{object}	responses.InterServerErrorResponse	"Error"
+//	@Router			/product/update [put]
 func (p *ProductsController) UpdateProductHandler(ctx *gin.Context) {
 	data := new(dto.ProductRequest)
 	pk := ctx.Param("pk")
@@ -53,7 +88,7 @@ func (p *ProductsController) UpdateProductHandler(ctx *gin.Context) {
 		return
 	}
 	if _, exists := p.service.ProductByPK(pk); !exists {
-		ctx.AbortWithStatusJSON(http.StatusNotFound, gin.H{"response": "category not found"})
+		ctx.AbortWithStatusJSON(http.StatusNotFound, gin.H{"response": "product not found"})
 		return
 	}
 	updatedProduct, err := p.service.UpdateProduct(pk, data)
@@ -64,6 +99,18 @@ func (p *ProductsController) UpdateProductHandler(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK, updatedProduct)
 }
 
+// DeleteProductHandler
+//
+//	@Summary		Delete exists Product
+//	@Description	This endpoint deletes an existing Product from the store.
+//	@Tags			Product
+//	@Accept			json
+//	@Produce		json
+//	@Param			pk	path		string								true	"Product Slug"
+//	@Success		204	{object}	responses.DeleteRecordResponse		"Success"
+//	@Failure		404	{object}	responses.ProductNOTExistsResponse	"Not Found"
+//	@Failure		500	{object}	responses.InterServerErrorResponse	"Error"
+//	@Router			/product/delete/{pk} [delete]
 func (p *ProductsController) DeleteProductHandler(ctx *gin.Context) {
 	param := ctx.Param("pk")
 	if _, exists := p.service.ProductByPK(param); !exists {
