# src/internal/models/products.go
@@ -8,14 +8,14 @@ import (
 
 type Products struct {
 	common.SlugModel
-	Name         string     `gorm:"size:75;not null;index"`
-	Description  string     `gorm:"size:300;not null"`
-	Price        float64    `gorm:"not null"`
-	Stock        int        `gorm:"not null"`
-	IsAvailable  bool       `gorm:"not null"`
-	Weight       int        `gorm:"not null"`
+	Name         string     `gorm:"size:75;not null;index" example:"Phone"`
+	Description  string     `gorm:"size:300;not null" example:"Phone Description"`
+	Price        float64    `gorm:"not null" example:"599"`
+	Stock        int        `gorm:"not null" example:"6"`
+	IsAvailable  bool       `gorm:"not null" example:"true"`
+	Weight       float64    `gorm:"not null" example:"0.7"`
 	Views        int        `gorm:"not null"`
-	CategorySlug string     `gorm:"not null" json:"category_slug"`
+	CategorySlug string     `gorm:"not null" json:"category_slug" example:"digital"`
 	Comments     []Comments `gorm:"foreignKey:ProductsSlug;references:Slug"`
 	Tags         []Tags     `gorm:"many2many:product_tags"`
 }
