# src/pkg/responses/common.go
@@ -3,3 +3,5 @@ package responses
 type InterServerErrorResponse struct {
 	Response string `example:"Internal server error"`
 }
+
+type DeleteRecordResponse struct{}
